--- a/lab5_p2/my-app/index.html
+++ b/lab5_p2/my-app/index.html
@@ -1,26 +1,8 @@
-<!-- DEFAULT
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="https://openlayers.org/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Using OpenLayers with Vite</title>
-  </head>
-  <body>
-    <div id="map"></div>
-    <script type="module" src="./main.js"></script>
-  </body>
-</html>
--->
-
-<!-- following code from https://openlayers.org/en/v8.1.0/examples/overlay.html -->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Overlay</title>
+    <title>Geographic Coordinates</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/ol/ol.css">
     <style>
@@ -28,35 +10,18 @@
         width: 100%;
         height: 400px;
       }
-      #marker {
-        width: 20px;
-        height: 20px;
-        border: 1px solid #088;
-        border-radius: 10px;
-        background-color: #0FF;
-        opacity: 0.5;
-      }
-      #vienna {
-        text-decoration: none;
-        color: white;
-        font-size: 11pt;
-        font-weight: bold;
-        text-shadow: black 0.1em 0.1em 0.2em;
-      }
-      .popover-body {
-        min-width: 276px;
+      td {
+        padding: 0 0.5em;
+        text-align: right;
       }
     </style>
   </head>
   <body>
-    <div id="map" class="map"></div>
-    <div style="display: none;">
-      <!-- Clickable label for Vienna -->
-      <a class="overlay" id="vienna" target="_blank" href="https://en.wikipedia.org/wiki/Vienna">Vienna</a>
-      <div id="marker" title="Marker"></div>
-      <!-- Popup -->
+    <div id="map" class="map">
       <div id="popup"></div>
     </div>
+    <div id="info"></div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="main.js"></script>
