--- a/lab5_p2/col_ver/index.html
+++ b/lab5_p2/col_ver/index.html
@@ -25,7 +25,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="main.js"></script> 
+    <script type="module" src="main.mjs"></script> 
     <!--<script src="bundle.js"></script>-->
   </body>
 </html>
