--- a/lab5_p2/google_maps/index_hardcode.html
+++ b/lab5_p2/google_maps/index_hardcode.html
@@ -6,8 +6,8 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script src="https://use.fontawesome.com/releases/v6.2.0/js/all.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="./v6_style.css" />
-    <script type="module" src="./v6_map.js"></script>
+    <link rel="stylesheet" type="text/css" href="./style_hardcode.css" />
+    <script type="module" src="./map_hardcode.js"></script>
     <script type="module" src="./node_modules/mysql2/promise.js"></script>
     <script type="module" src="./promises.js"></script>
   </head>
