--- a/chatbot/chatbot-react/public/index.html
+++ b/chatbot/chatbot-react/public/index.html
@@ -9,6 +9,8 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" crossorigin="anonymous" />
     <!-- Styles for the forum, you might want to move these into separate CSS files and import them in components -->
+    <!-- Add this in the <head> section of your public/index.html -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
         body {
             margin-top: 20px;
