--- a/chatbot/chatbot-react/public/index.html
+++ b/chatbot/chatbot-react/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>React Forum App</title>
+    <title>UpAllNight Forums</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
