--- a/chatbot/chatbot-react/public/index.html
+++ b/chatbot/chatbot-react/public/index.html
@@ -16,7 +16,7 @@
             margin-top: 20px;
             color: #1a202c;
             text-align: left;
-            background-color: #e2e8f0;
+            background-color: #373858  /*original color #e2e8f0;*/
         }
         /* Include other styles from your original HTML */
     </style>
